1998-10-13  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-list.h, gnome-icon-list.c: Add
	gnome_icon_list_construct function, and use it in _new.

1998-10-13  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (gnome_mdi_open_toplevel): restrict MDI
	to a single toplevel when in modal mode.
	* gnome-mdi.[ch] (gnome_mdi_set_window_view): removed:
	gnome_mdi_set_active_view does precisely that and even more!
	* gnome-mdi-session.c (gnome_mdi_restore_state): replaced
	gnome_mdi_set_window_view() with gnome_mdi_set_active_view()
	and removed a hash table lookup for the app since mdi retrieves
	it from the view.
	
1998-10-13  Martin Baulig  <martin@home-of-linux.org>

	* gnome-app-helper.c (create_menu_item): When the label is the
	empty string, don't call gettext on it. This is required since
	gettext maps the empty string to the header lines at the beginning
 	of the .pot files.

1998-10-12  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c, gnome-icon-list.h: New implementations of the
	GnomeIconList.  This GnomeIconList is derived from the GnomeCanvas
	and has some nice features:  inline name edition of filenames and
	banding selection of icons as well as a flicker free display.  

	The icon list API is fully documented with the proposed commenting
	style. 

	The downside is that the constructor API has changed, I will
	shortly fix the code on CVS to work with the new API. 

	* gnome-icon-item.c, gnome-icon-item.h: New files.  Canvas items
	that implement text editing in a width-constrained region.  They
	use a GtkEntry as a hidden backend to handle most of the nasty
	details of input editing.  This means the edition features of them
	are very complete. 

	* gnome-icon-text.c, gnome-icon-text.h:  Routines used to layout
	wrapped text for tooltips and icons is now on their own file.
	Fully documented as well. 

1998-10-12  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_window_to_world): New public